--- a/htdocs/install/specific.html
+++ b/htdocs/install/specific.html
@@ -39,8 +39,8 @@ For versions of egcs before 1.0.1 you'll need a special
 to fix an egcs bug on this platform.
 
 <p><b>hppa*-hp-hpux*</b><br>
-We <b>highly</b> recommend using gas/binutils-2.8 on all hppa platforms; you
-may encounter a variety of problems when using the HP assembler.
+We <b>highly</b> recommend using gas/binutils-2.8 or newer on all hppa
+platforms; you may encounter a variety of problems when using the HP assembler.
 
 <p><b>hppa*-hp-hpux9</b><br>
 The HP assembler has major problems on this platform.  We've tried to work
@@ -125,12 +125,8 @@ It has been reported that you might need binutils-2.8.1.0.23 for this
 platform too.
 <a href="ftp://ftp.yggdrasil.com/private/hjl">binutils-2.8.1.0.23</a>
 
-<p>
-exception handling 
-<p>XXX Linux stuff
--k encaps stuff
 <hr>
-<i>Last modified on August 3, 1998.</i>
+<i>Last modified on August 29, 1998.</i>
 
 <!--#include virtual="/glimpsebox.html"-->
 </body>
