--- a/htdocs/install/test.html
+++ b/htdocs/install/test.html
@@ -16,7 +16,7 @@ front ends.
 
 <p>Second, you must have a new version of dejagnu on your system; dejagnu-1.3
 will not work.  We have made a 
-<a href="ftp://egcs.cygnus.com/pub/egcs/infrastructure/dejagnu-971222.tar.gz">
+<a href="ftp://egcs.cygnus.com/pub/egcs/infrastructure/dejagnu-980528.tar.gz">
 dejagnu snapshot</a> available in egcs.cygnus.com:/pub/egcs/infrastructure until
 a new version of dejagnu can be released.
 
@@ -30,8 +30,13 @@ well as the C++ runtime libraries.
 
 <p> How to interpret test results TBD.
 
+<p> It is normal for some tests to report
+unexpected failures.  At the current time our testing harness does not allow
+fine grained control over whether or not a test is expected to fail.  We expect
+to fix this problem in future releases.
+
 <hr>
-<i>Last modified on May 15, 1998.</i>
+<i>Last modified on August 29, 1998.</i>
 
 <!--#include virtual="/glimpsebox.html"-->
 </body>
