--- a/htdocs/alias.html
+++ b/htdocs/alias.html
@@ -99,9 +99,9 @@ may be possible to determine that two memory references can not conflict.
 For example, memory references into the static store can not conflict with
 stack or heap accesses.
 
-<p>John's code actually values as they migrate from one register to another or
-are altered in safe ways (for example, addition of a constant does not change
-a base value).
+<p>John's code actually tracks values as they migrate from one register to
+another or are altered in safe ways (for example, addition of a constant does
+not change a base value).
 
 <hr>
-<i>Last modified on June 29, 1998.</i>
+<i>Last modified on August 29, 1998.</i>
