--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -25,7 +25,7 @@ ultimate inclusion into the gcc2 tree.
 href="#releases">releases</a>. We want those releases to work well on
 a variety of native (including linux) and cross targets.  <a
 href="egcs-1.0/egcs-1.0.3.html"> egcs-1.0.3</a> is the current release.
-<a href="egcs-1.1/egcs-1.1.html"> egcs-1.1</a> is the upcoming release.
+<a href="egcs-1.1/schedule.html"> egcs-1.1</a> is the upcoming release.
 
 <p>egcs is pronounced "eggs", the c is silent.
 <hr>
