--- a/htdocs/install/configure.html
+++ b/htdocs/install/configure.html
@@ -20,8 +20,8 @@ where <i>srcdir</i> == <i>objdir</i> should still work, but doesn't
 get extensive testing; building where <i>objdir</i> is a subdirectory
 of <i>srcdir</i> is unsupported.
 
-<p>Second, when configuring a native system, either "cc" must be in your
-path or you must set CC in your environment before running configure.
+<p>Second, when configuring a native system, either "cc" or "gcc" must be in
+your path or you must set CC in your environment before running configure.
 Otherwise the configuration scripts may fail.
 
 <p>To configure egcs:
