--- a/htdocs/egcs-1.1/egcs-1.1.html
+++ b/htdocs/egcs-1.1/egcs-1.1.html
@@ -5,82 +5,74 @@
 <body>
 <h1 align="center">egcs-1.1</h1>
 
-<p>The egcs project is rapidly approaching its second major release
-(egcs-1.1).
+<p> This is the prototype announcement.  egcs-1.1 has not been released yet.
+<p>XXX, 1998
 
-<p>This page is meant to provide information about the current schedule
-for egcs-1.1, the <a href="egcs-1.1-test.html"> testing/release criteria </a>
-for egcs-1.1, <a href="features.html"> new features </a> to be found in
-egcs-1.1, etc.
+<p>We are pleased to announce the release of egcs-1.1.
 
-<p> August 29, 1998.  Regression, libg++, glibc, linux kernel, rtems testing
-all look good.  RedHat 5.1 testing looks good on the x86.  Still waiting on
-results for other platforms.  There is one sparc and one m68k codegen bug
-to investigate before we can make a release.
+<p>egcs is a collaborative effort involving several groups of hackers using
+an open development model to accelerate development and testing of GNU
+compilers and runtime libraries.
 
-<p> August 14, 1998.  The egcs-1.1 sources are frozen.  Only critical patches
-are being accepted.  All checkins to the egcs-1.1 tree must be approved by
-the release manager (law@cygnus.com).  We are shooting for an end of the month
-release.
+<p>egcs-1.1 is a major new release of the egcs compiler system.  It has been
+<a href="egcs-1.1-test.html"> extensively tested </a> and is believed to be
+stable and suitable for widespread use.
 
-<p> July 14, 1998.  We have created the <a href="egcs-1.1-branch.html">
-egcs-1.1 branch</a>. 
+<p>egcs-1.1 is based on an June 6, 1998 snapshot of the gcc-2.8 development
+sources; it contains all of the new features found in gcc-2.8.1 as well as
+all new development from gcc2 up to June 6, 1998.
 
-<p> July 7, 1998.  The <a href="egcs-1.1-test.html">testing plan</a> is not
-    ready yet, but we are actively working on solidifying the testing plan.
 
-<p>The tenative schedule for the egcs-1.1 release is:
-
+<p>egcs also contains many improvements and features not found in gcc2 or
+in older versions of egcs.
 <ul>
-  <li> <b>July 3, 1998. Feature freeze date</b>.
-  <p>All new features, optimizations, etc need to be <i>submitted</i> by
-  this date.  It is very likely that not all submissions will be accepted
-  for egcs-1.1.  But all submissions need to be made available for evaluation
-  by July 3, 1998.
-
-  <p> It is also possible some patches which have been submitted and are
-  accepted for egcs-1.1 will not have been installed by this date due to
-  EOQ committments for many of the Cygnus volunteers.
-
-  <p> After July 3, 1998, only bugfix submissions will be considered for
-  the egcs-1.1 release.
-
-  <p> By July 3, 1998, we also want to have a testing plan and release
-  criteria in place.
-
-  <p><li> <b>July 11, 1998. Branch Creation & Testing</b>.
-  <p> the egcs-1.1 branch will be created on July 11, 1998 and snapshots will
-  occur from the egcs-1.1 branch instead of the mainline sources.
-
-  <p> By July 11, 1998 it is hoped that all new features, optimizations, etc
-  slated for the egcs-1.1 release have been installed into the source tree.
-  
-  <p> Wide scale, focused testing should start on or before July 11th.
-
-  <p> <li> <b>July 31, 1998. Critical Bug Freeze Date</b>.
-  <p>July 31, 1998 is the target date for freezing the sources.  After this
-  date only critical bugfixes will be accepted for inclusion in egcs-1.1.
-  This may be overly optimistic, but it's important to have a goal to shoot
-  for.
-
+  <li> Global common subexpression elimination and
+  global constant/copy propagation (aka <a href="../gcse.html"> gcse</a>)
+  <li> Ongoing improvements to the <a href="../alias.html"> alias analysis </a>
+  support to allow for better optimizations throughout the compiler.
+  <li> Integrated Fortran compiler and runtime libraries based on 
+  <a href="fortran.html"> g77-0.5.24-19980804 </a>.
+  <li> Vastly improved <a href="c++features.html"> C++ compiler</a> and
+  integrated C++ runtime libraries.
+  <li> Fixes for the /tmp symlink race security problems.
+  <li> New targets including mips16, arm-thumb and 64 bit PowerPC support.
 </ul>
 
-<p> The release should go out as soon as possible in early August.
+<p>See the <a href="features.html"> new features</a> page for a more complete
+list of new features found in egcs-1.1 releases.
 
-<p> Note that we have the ability to install changes into the mainline
-sources during this process.  However, the main focus will be on the egcs-1.1
-specific issues.
+<p>The egcs-1.1 release includes installation instructions in both HTML
+and plaintext forms (see the INSTALL directory in the toplevel directory
+of the egcs-1.1 distribution).  However, we also keep the most up to date
+<a href="../install/index.html"> installation instructions </a>
+and <a href="buildstat.html"> build/test status </a> on our web page.  We
+will update those pages as new information becomes available.
 
-<p> It is highly likely that some minor releases will follow egcs-1.1 (ie
-egcs-1.1.1, egcs-1.1.2, etc).  So if a critical bug does not get fixed for
-egcs-1.1, it may be fixed in one of the minor releases.
+<p>And, we can't in good conscience fail to mention some
+<a href="caveats.html"> caveats </a> to using egcs-1.1.
 
-<p> We plan to do a post-release review of the proposed schedule vs
-the actual schedule used for egcs-1.1 so that we can improve the process
-in the future.
+<p>Update: Big thanks to Stanford for providing a high speed link for
+downloading egcs (go.cygnus.com)!
+
+<p><a href="ftp://egcs.cygnus.com/pub/egcs/releases/index.html">
+Download egcs-1.1
+from ftp.cygnus.com (USA California)</a>
+<p><a href="ftp://go.cygnus.com/pub/ftp.cygnus.com/egcs/releases/index.html">
+Download egcs-1.1 from go.cygnus.com (USA California -- High speed link
+provided by Stanford)</a>
+<p><a href="ftp://cambridge.cygnus.com/pub/egcs/releases/index.html">
+Download egcs-1.1
+from cambridge.cygnus.com (USA Massachusetts)</a>
+
+<p>The egcs-1.1 release is also available on many mirror sites.<br>
+<a href="../index.html#mirrors"> Goto mirror list to find a closer site</a>
+
+<p>We'd like to thank the numerous people that have contributed new
+features, test results, bugfixes, etc.  Unfortunately, they're far
+too numerous to mention by name.
 
 <hr>
-<i>Last modified on August 29, 1998.</i>
+<i>Last modified on May 10, 1998.</i>
 
 <!--#include virtual="/glimpsebox.html"-->
 </body>
