--- a/htdocs/egcs-1.1/features.html
+++ b/htdocs/egcs-1.1/features.html
@@ -6,14 +6,10 @@
 <h1 align="center">egcs-1.1 new features</h1>
 
 <ul>
-  <li>Core compiler is based on the gcc2 development tree from June 9, 1998,
-  so we have all of the <a href="../egcs-1.0/features-2.8.html"> features
-  found in gcc-2.8</a>.
-  <li>Integrated GNU Fortran compiler based on g77-0.5.24-19980804.
+  <li>Integrated GNU Fortran compiler based on <a href="fortran.html">
+  g77-0.5.24-19980804. </a>
   <li>Vast improvements in the C++ compiler; so many they have 
   <a href="c++features.html">page of their own! </a>
-  <li>Many improvements in the Fortran compiler; so many they have 
-  <a href="fortran.html">page of their own! </a>
   <li>Compiler implements <a href="../gcse.html"> global common subexpression
   elimination and global copy/constant propagation. </a>
   <li>More major improvements in the <a href="../alias.html"> alias analysis
@@ -35,10 +31,42 @@
   improve performance of generated code for some architectures.
   <li> The compiler's branch shorten algorithms have been significantly
   improved to work better on targets which align jump targets.
-  <li> The compiler now implements the ADDRESSOF optimizations which can
-  significantly reduce the overhead for certain inline function calls.
-  <li> See the <a href="news.html"> NEWS file</a> for more improvements and
-  further details.
+  <li> The compiler now supports -Os to prefer optimizing for code space
+  over optimizing for code speed.
+  <li> The compiler will now totally eliminate library calls which compute
+  constant values.  This primarily helps targets with no integer div/mul
+  support and targets without floating point support.
+  <li> The compiler now supports an extensive "--help" option.
+  <li> cpplib has been greatly improved and may be suitable for limited use.
+  <li> Memory footprint for the compiler has been significantly reduced
+  for some pathalogical cases.
+  <li> The time to build egcs has been improved for certain targets
+  (particularly the alpha and mips platforms).
+  <li> Many infrastructure improvements throughout the compiler, plus the
+  usual mountain of bugfixes and minor improvements.
+  <li> Target dependent improvements:
+     <ul>
+ 	<li> Sparc port now includes V8 plus and V9 support as well as
+	performance tuning for Ultra class machines.  The Sparc port now
+	uses the Haifa scheduler.
+	<li> Alpha port has been tuned for the EV6 processor and has an
+	optimized expanstion of memcpy/bzero.  The Alpha port now uses
+	the Haifa scheduler.
+	<li> RS6000/PowerPC: egcs-1.1 includes support for the Power64
+	architecture and aix4.3 support.  The RS6000/PowerPC port now
+	uses the Haifa scheduler.
+	<li> x86: Alignment of static store data and jump targets is per
+	Intel recommendations now.  Various improvements throughout the
+	x86 port to improve performance on Pentium processors.  Conditional
+	move support has been fixed and enabled for PPro processors.
+	The x86 port also better supports 64bit operations now.
+	<li> MIPS has improved multiply/multiply-add support and now includes
+	mips16 ISA support.
+	<li> M68k has many micro-optimizations and Coldfire fixes.
+     </ul>
+  <li>Core compiler is based on the gcc2 development tree from June 9, 1998,
+  so we have all of the <a href="../egcs-1.0/features-2.8.html"> features
+  found in gcc-2.8</a>.
 </ul>
 
 <p><a href="../index.html">Return to the egcs home page</a>
