Link in an acknowledgements page.

--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -78,6 +78,12 @@ egcs.cygnus.com:/pub/egcs/releases</a>.
 release or snapshots, please try to select an appropriate 
 <a href="mirrors.html"> mirror site</a>. 
 
+<h2><a name="thanks">ACKNOWLEDGEMENTS</a></h2>
+
+<p> No project of this size can be successful without contributions from
+numerous folks.  We have compiled a <a href="thanks.html"> partial list of
+contributors.</a>
+
 <hr>
 <p>We encourage contributions of code, bugfixes, new optimizations, new
 features, documentation updates, web page improvements, etc.  Look
