--- a/htdocs/chill.html
+++ b/htdocs/chill.html
@@ -3,7 +3,7 @@
 <title>Chill Front End</title>
 </head>
 <body>
-<h1 align="center">Chil Front End</h1>
+<h1 align="center">Chill Front End</h1>
 
 <p>August 29, 1998
 
