--- a/htdocs/egcs-1.1/features.html
+++ b/htdocs/egcs-1.1/features.html
@@ -15,11 +15,11 @@
   <li>More major improvements in the <a href="../alias.html"> alias analysis
   code </a>.
   <li> More major improvements in the exception handling code to improve
-  performance, lower static overhead and provide infrastructure for future
+  performance, lower static overhead and provide the infrastructure for future
   improvements.
   <li> The infamous /tmp symlink race security problems have been fixed.
   <li> The regmove optimization pass has been nearly completely rewritten
-  to improve performane of generated code.
+  to improve performance of generated code.
   <li> The compiler now recomputes register usage information before local
   register allocation.  By providing more accurate information to the
   priority based allocator, we get better register allocation.
@@ -29,7 +29,7 @@
   scheduler have been fixed, resulting in much better code for certain
   programs.  Additionally, we have tuned the scheduler in various ways to
   improve performance of generated code for some architectures.
-  <li> The compiler's branch shorten algorithms have been significantly
+  <li> The compiler's branch shortening algorithms have been significantly
   improved to work better on targets which align jump targets.
   <li> The compiler now supports -Os to prefer optimizing for code space
   over optimizing for code speed.
