--- a/htdocs/egcs-1.1/egcs-1.1.html
+++ b/htdocs/egcs-1.1/egcs-1.1.html
@@ -35,7 +35,7 @@ in older versions of egcs.
   <li> Vastly improved <a href="c++features.html"> C++ compiler</a> and
   integrated C++ runtime libraries.
   <li> Fixes for the /tmp symlink race security problems.
-  <li> New targets including mips16, arm-thumb and 64 bit PowerPC support.
+  <li> New targets including mips16, arm-thumb and 64 bit PowerPC.
 </ul>
 
 <p>See the <a href="features.html"> new features</a> page for a more complete
