--- a/htdocs/egcs-1.1/schedule.html
+++ b/htdocs/egcs-1.1/schedule.html
@@ -13,10 +13,10 @@ for egcs-1.1, the <a href="egcs-1.1-test.html"> testing/release criteria </a>
 for egcs-1.1, <a href="features.html"> new features </a> to be found in
 egcs-1.1, etc.
 
-<p> August 29, 1998.  Regression, libg++, glibc, linux kernel, rtems testing
-all look good.  RedHat 5.1 testing looks good on the x86.  Still waiting on
-results for other platforms.  There is one sparc and one m68k codegen bug
-to investigate before we can make a release.
+<p> August 30, 1998.  Regression, libg++, glibc, linux kernel, rtems testing
+all look good.  RedHat 5.1 testing looks good on the x86 and I've been told
+that RedHat 5.1 testing on the Alpha looks good too.  No word on the Sparc
+port.
 
 <p> August 14, 1998.  The egcs-1.1 sources are frozen.  Only critical patches
 are being accepted.  All checkins to the egcs-1.1 tree must be approved by
@@ -80,7 +80,7 @@ the actual schedule used for egcs-1.1 so that we can improve the process
 in the future.
 
 <hr>
-<i>Last modified on August 29, 1998.</i>
+<i>Last modified on August 30, 1998.</i>
 
 <!--#include virtual="/glimpsebox.html"-->
 </body>
