Updates from David.

--- a/htdocs/egcs-1.1/egcs-1.1-test.html
+++ b/htdocs/egcs-1.1/egcs-1.1-test.html
@@ -22,7 +22,7 @@
        <br>x86 has successfully passed the glibc test.
        <br>ppc has passed using different versions of the glibc sources
        <br>alpha "passed" (failures were glibc problems, not compiler problems).
-       <br>sparc and m68k are untested
+       <br>sparc builds and passes all glibc testsuites.
 
 
   <li> Linux kernel builds and runs (and 2.1.115).  Platforms will be
@@ -31,13 +31,14 @@
 
        <br>x86 has passed the kernel test (2.1.115)
 
-       <br>ppc has passed using different versions of the kernel
+       <br>PowerPC has passed using different versions of the kernel
 
-       <br>alpha has had problems with 2.1.115, 2.1.116.  Some success with
+       <br>Alpha has had problems with 2.1.115, 2.1.116.  Some success with
        2.1.117, but it still locks up.  Could be a kernel problem.  A different
        person has reported success with 2.1.115 through 2.1.118.
 
-       <br>sparc is untested
+       <br>Sparc and Sparc64 linux kernels successfully build work work
+       for non-SMP configurations.p
        
   <li> Red Hat 5.1 builds without errors on x86, Alpha.  
        <ul>
