Correction of various minor typos.  Make punctuation more consistent.

--- a/htdocs/thanks.html
+++ b/htdocs/thanks.html
@@ -19,9 +19,9 @@ particular order.
   <li> David Miller for overall direction via the steering committee, lots of
   sparc work, improvements in jump.c and interfacing with the Linux kernel
   developers.
-  <li> Jim Wilson for tacking hard problems in various places that nobody else
+  <li> Jim Wilson for tackling hard problems in various places that nobody else
   wanted to work on.
-  <li> Jeff Law for random hacking
+  <li> Jeff Law for random hacking.
   <li> Brendan Kehoe for his ongoing work with g++.
   <li> Joern Rennecke for maintaining the sh port, regmove & reload hacking.
   <li> Tom Tromey for internationalization support (which egcs will import
@@ -30,13 +30,13 @@ particular order.
   generally fixing lots of old problems we've ignored for years.
   <li> Nick Clifton for arm, v850, m32r work, --help, and other random hacking.
   <li> Gavin Romig-Koch for lots of behind the scenes MIPS work.
-  <li> Kaven Ghazi for overall direction via the steering committee and
+  <li> Kaveh Ghazi for overall direction via the steering committee and
   amazing work to make -W -Wall useful.
   <li> Jakub Jelinek for his sparc work and sibling call optimizations.
   <li> Mark Mitchell for mountains of C++ work, load/store hoisting out of
   loops and alias analysis improvements.
   <li> Dave Brolley for work on cpplib and Chill.
-  <li> David Edelsohn for this direction via the steering committee and
+  <li> David Edelsohn for his direction via the steering committee and
   ongoing work with the RS6000/PowerPC port.
   <li> Jason Merrill for leading the g++ effort.
   <li> Alexandre Petit-Bianco for infrastructure related to Java.
@@ -60,19 +60,19 @@ particular order.
   fixincludes, etc.
   <li> Geoffrey Keating for his ongoing work to make the PPC work for Linux.
   <li> Robert Lipe for OpenServer support, new testsuites, testing, etc.
-  <li> Marton von Loewis for internal consistency checking infrastructure,
-  c++ namespaces
+  <li> Martin von Loewis for internal consistency checking infrastructure,
+  c++ namespaces.
   <li> Dave Love for his ongoing work with the Fortran front end and 
   runtime libraries.
   <li> Gary Thomas for his ongoing work to make the PPC work for Linux.
-  <li> Ken Raeburn for various improvements to checker, mips ports
+  <li> Ken Raeburn for various improvements to checker and mips ports.
   <li> Todd Vierling for contributions for NetBSD ports.
   <li> Peter Gerwinski for various bugfixes and the Pascal front end.
   <li> Craig Burley for overall direction in the steering committee and
   leadership of the Fortran effort.
   <li> Vladimir Markarov for hacking some ugly i960 problems and overall 
   knowledge and direction in the area of instruction scheduling.
-  <li> Stan Cox for care and feeding of the x86 port 
+  <li> Stan Cox for care and feeding of the x86 port.
   <li> Gerald Pfeifer for helping with the web pages and pointing out lots
   of problems we need to solve.
   <li> Catherine Moore for fixing various ugly problems we have sent her
@@ -80,8 +80,8 @@ particular order.
   kernels.
   <li> Klaus Kaempf for his ongoing work to make alpha-vms a viable target.
   <li> Kamil Iskra for general m68k hacking.
-  <li> Weiwen Liu for testing and various bugfixes
-  <li> Ralf Corsepious for SH testing and minor bugfixing
+  <li> Weiwen Liu for testing and various bugfixes.
+  <li> Ralf Corsepious for SH testing and minor bugfixing.
   <li> Philippe De Muyter for his work on the m68k port.
   <li> Andrew MacLeod for his ongoing work in building a real EH system.
   <li> Joel Sherrill for his direction via the steering committee, RTEMS
@@ -92,64 +92,64 @@ particular order.
   <li> Ulrich Drepper for his work on the C++ runtime libraries, glibc, and
   testing of egcs using glibc.
   <li> Benjamin Kosnik for his g++ work.
-  <li> John Wehle for various improvements for the x86 code generator
-  <li> Herman A.J. ten Brugge for various fixes
-  <li> Graham S. for various infrastructure improvements
+  <li> John Wehle for various improvements for the x86 code generator.
+  <li> Herman A.J. ten Brugge for various fixes.
+  <li> Graham S. for various infrastructure improvements.
   <li> Bruno Haible for various new warnings.
   <li> Juha Sarlin for improvements to the H8 code generator.
   <li> Per Bothner for various improvements to our infrastructure for
   supporting new languages.  Chill and (someday) his Java contributions.
   <li> Mike Stump for his g++ contributions over the years and more recently
   his vxworks contributions.
-  <li> Bruce Korb for the future replacement of "fixincludes"
+  <li> Bruce Korb for the future replacement of "fixincludes".
   <li> Bernd Schmidt for various code generation improvements and the first
   step towards a new reload pass.
   <li> Alexandre Oliva for various build infrastructure improvements, scripts
   and amazing testing work.
-  <li> Bob Manson for his behind the scenes work on dejagnu
+  <li> Bob Manson for his behind the scenes work on dejagnu.
   <li> Bill Moyer for his behind the scenes work on various issues.
   <li> Paul Eggert for random hacking all over gcc.
   <li> Alan Modra for various Linux bits and testing.
-  <li> Krister Walkridsson for random bugfixes
+  <li> Krister Walkridsson for random bugfixes.
   <li> Don Bowman for mips-vxwork contributions.
   <li> David Mosberger-Tang for various Alpha improvements.
-  <li> Richard Kenner for his ongoing work with gcc2
+  <li> Richard Kenner for his ongoing work with gcc2.
   <li> Geoff Noer for this work on getting cygwin native builds working.
-  <li> Teemu Torma for thread safe exception handling support
-  <li> Ken Rose for fixes to our delay slot filling code
+  <li> Teemu Torma for thread safe exception handling support.
+  <li> Ken Rose for fixes to our delay slot filling code.
   <li> Bruno Haible for improvements in the runtime overhead for EH
   and assorted bugfixes.
-  <li> Michael Tiemann for random bugfixes
+  <li> Michael Tiemann for random bugfixes.
   <li> Andrey Slepuhin for assorted AIX hacking.
   <li> Marc Lehmann for his guidance via the steering committee and helping
   with analysis and improvements of x86 performance.
-  <li> Lee Iverson for random fixes
+  <li> Lee Iverson for random fixes.
   <li> Greg McGary for random fixes and (someday) bounded pointers.
   <li> Kriang Lerdsuwanakij for improvements to demangler and various c++
-  fixes
+  fixes.
   <li> Toon Moene for overall leadership via the steering committee, and his
   ongoing work to make us make Fortran run fast.
   <li> Lassi Tuura for improvements to config.guess to determine HP processor
-  types
-  <li> Anthony Green for his -Os contribution
-  <li> Alasdair Baird for various bugfixes
-  <li> Robin Kirkham for cpu32 support
-  <li> Shigeya Suzuki for this fixes for the bsdi platforms
-  <li> J. Kean Johnston for SCO5 support
-  <li> Nigel Stephens for various mips16 related fixes/improvements
+  types.
+  <li> Anthony Green for his -Os contribution.
+  <li> Alasdair Baird for various bugfixes.
+  <li> Robin Kirkham for cpu32 support.
+  <li> Shigeya Suzuki for this fixes for the bsdi platforms.
+  <li> J. Kean Johnston for OpenServer support.
+  <li> Nigel Stephens for various mips16 related fixes/improvements.
   <li> Fred Fish for BeOS support and Ada fixes.
-  <li> Christian Iseli for various bugfixes
-  <li> Thomas Koenig for various bugfixes
-  <li> Torbjorn Granlund for various fixes and the c-torture testsuite
+  <li> Christian Iseli for various bugfixes.
+  <li> Thomas Koenig for various bugfixes.
+  <li> Torbjorn Granlund for various fixes and the c-torture testsuite.
   <li> Scott Snyder for variou fixes.
-  <li> Scott Christley for his ObjC contributions
-  <li> Judy Goldberg for his c++ contributions
-  <li> Kate Hedstrom for staking the g77 folks with an initial testsuite
-  <li> Joe Buck for his guideance and leadership via the steering committee
-  <li> Ovidiu Predescu for his work on the ObjC front end
-  <li> Branko Cibej for more warning contributions
-  <li> Steve Holmgren for MachTen patches
-  <li> Mark Klein for PA improvements
+  <li> Scott Christley for his ObjC contributions.
+  <li> Judy Goldberg for his c++ contributions.
+  <li> Kate Hedstrom for staking the g77 folks with an initial testsuite.
+  <li> Joe Buck for his guidance and leadership via the steering committee.
+  <li> Ovidiu Predescu for his work on the ObjC front end.
+  <li> Branko Cibej for more warning contributions.
+  <li> Steve Holmgren for MachTen patches.
+  <li> Mark Klein for PA improvements.
   <li> Klaus-Georg Adams
   <li> Klaus Espenlaub
   <li> Henning Ptersen
