--- a/htdocs/install/build.html
+++ b/htdocs/install/build.html
@@ -9,7 +9,7 @@
 runtime libraries.
 
 <p>We <b>highly</b> recommend that egcs be built using gnu-make; other
-versions make work, then again they might not.  To be safe build with gnu-make.
+versions may work, then again they might not.  To be safe build with gnu-make.
 
 <p><b>Building a native compiler</b>
 <p>For a native build issue the command "make bootstrap".  This will build
