--- a/htdocs/install/test.html
+++ b/htdocs/install/test.html
@@ -14,6 +14,8 @@ ends, then you do not have the testsuites.  You can download the testsuites
 from the same site where you downloaded the core distribution and language
 front ends.
 
+<p>Note, dejagnu will not build/run on NEXTSTEP systems.
+
 <p>Second, you must have a new version of dejagnu on your system; dejagnu-1.3
 will not work.  We have made a 
 <a href="ftp://egcs.cygnus.com/pub/egcs/infrastructure/dejagnu-980528.tar.gz">
