Note about C++ binary (in) compatability.

--- a/htdocs/egcs-1.1/caveats.html
+++ b/htdocs/egcs-1.1/caveats.html
@@ -27,6 +27,10 @@
   <li>G++ is also aggressively tracking the C++ standard; as a result code
   which was previously valid (and thus accepted by other compilers and older
   versions of g++) may no longer be accepted.
+
+  <li>egcs-1.1 compiled C++ code is not binary compatible with egcs-1.0.x
+  or gcc-2.8.x due to changes necessary to support thread safe exception
+  handling.
 </ul>
 
 <p><a href="../index.html">Return to the egcs home page</a>
