Fix links to mirror list.

--- a/htdocs/egcs-1.0/egcs-1.0.1.html
+++ b/htdocs/egcs-1.0/egcs-1.0.1.html
@@ -128,7 +128,7 @@ Download egcs-1.0.1
 from cambridge.cygnus.com (USA Massachusetts)</a>
 
 <p>The egcs-1.0.1 release is also available on many mirror sites.<br>
-<a href="../index.html#mirrors"> Goto mirror list to find a closer site</a>
+<a href="../mirrors.html"> Goto mirror list to find a closer site</a>
 
 <p>We'd like to thank the numerous people that have contributed new
 features, test results, bugfixes, etc.  Unfortunately, they're far
