--- a/htdocs/egcs-1.0/egcs-1.0.html
+++ b/htdocs/egcs-1.0/egcs-1.0.html
@@ -67,7 +67,7 @@ from cambridge.cygnus.com (USA Massachusetts)</a>
 
 
 <p>The egcs-1.0 release should be available on most mirror sites by now.<br>
-<a href="../index.html#mirrors"> Goto mirror list to find a closer site</a>
+<a href="../mirrors.html"> Goto mirror list to find a closer site</a>
 
 <p>We'd like to thank the numerous people that have contributed new
 features, test results, bugfixes, etc.  Unfortunately, they're far
