--- a/htdocs/thanks.html
+++ b/htdocs/thanks.html
@@ -110,7 +110,7 @@ particular order.
   <li> Bill Moyer for his behind the scenes work on various issues.
   <li> Paul Eggert for random hacking all over gcc.
   <li> Alan Modra for various Linux bits and testing.
-  <li> Krister Walkridsson for random bugfixes.
+  <li> Krister Walfridsson for random bugfixes.
   <li> Don Bowman for mips-vxwork contributions.
   <li> David Mosberger-Tang for various Alpha improvements.
   <li> Richard Kenner for his ongoing work with gcc2.
