--- a/htdocs/thanks.html
+++ b/htdocs/thanks.html
@@ -14,200 +14,197 @@ or some of your contributions are not listed.  The listing is not in any
 particular order.
 
 <ul>
-  <li> Mumit Khan for various contributions to the cygwin and mingw32 ports and
-  maintaining binary releases for Windows hosts.
-  <li> David Miller for overall direction via the steering committee, lots of
-  sparc work, improvements in jump.c and interfacing with the Linux kernel
-  developers.
-  <li> Jim Wilson for tackling hard problems in various places that nobody else
-  wanted to work on.
-  <li> Jeff Law for random hacking.
-  <li> Brendan Kehoe for his ongoing work with g++.
-  <li> Joern Rennecke for maintaining the sh port, regmove & reload hacking.
-  <li> Tom Tromey for internationalization support (which egcs will import
-  from gcc2 shortly).
-  <li> Richard Henderson for his ongoing sparc and alpha work, loop opts, and
-  generally fixing lots of old problems we've ignored for years.
-  <li> Nick Clifton for arm, v850, m32r work, --help, and other random hacking.
-  <li> Gavin Romig-Koch for lots of behind the scenes MIPS work.
-  <li> Kaveh Ghazi for overall direction via the steering committee and
-  amazing work to make -W -Wall useful.
-  <li> Jakub Jelinek for his sparc work and sibling call optimizations.
-  <li> Mark Mitchell for mountains of C++ work, load/store hoisting out of
-  loops and alias analysis improvements.
+  <li> Klaus-Georg Adams
+  <li> Alasdair Baird for various bugfixes.
+  <li> Per Bothner for various improvements to our infrastructure for
+  supporting new languages.  Chill and (someday) his Java contributions.
+  <li> Don Bowman for mips-vxwork contributions.
   <li> Dave Brolley for work on cpplib and Chill.
-  <li> David Edelsohn for his direction via the steering committee and
-  ongoing work with the RS6000/PowerPC port.
-  <li> Jason Merrill for leading the g++ effort.
-  <li> Alexandre Petit-Bianco for infrastructure related to Java.
-  <li> Michael Meissner for LRS framework, m32r, v850, powerpc, haifa and
-  other assorted hacking.
-  <li> Doug Evans for much of the global optimization framework, arc, m32r,
-  and sparc work.
-  <li> Hans-Peter Nilsson for various documentation fixes and fixes to
-  the c++ demangler.
-  <li> Michael Hayes for various thankless work he's done trying to get
-  the c30/c40 ports functional.
-  <li> Richard Earnshaw for his ongoing work with the ARM.
-  <li> Andreas Schawb for his work on the m68k port.
-  <li> Franz Sirl for his ongoing work with making the PPC port stable
-  for linux.
-  <li> H.J. Lu for his contributions to the steering committee, many x86
-  bug reports, prototype patches, etc.
+  <li> Herman A.J. ten Brugge for various fixes.
+  <li> Joe Buck for his guidance and leadership via the steering committee.
+  <li> Craig Burley for overall direction in the steering committee and
+  leadership of the Fortran effort.
+  <li> Andrew Cagney
   <li> John Carr for his alias work, sparc hacking, infrastructure improvements,
   direction via the steering committee, loop optimizations, etc.
-  <li> Ian Lance Taylor for his mips16 work, general configury hacking,
-  fixincludes, etc.
+  <li> Scott Christley for his ObjC contributions.
+  <li> Branko Cibej for more warning contributions.
+  <li> Nick Clifton for arm, v850, m32r work, --help, and other random hacking.
+  <li> Ralf Corsepious for SH testing and minor bugfixing.
+  <li> Stan Cox for care and feeding of the x86 port.
+  <li> Ulrich Drepper for his work on the C++ runtime libraries, glibc, and
+  testing of egcs using glibc.
+  <li> Richard Earnshaw for his ongoing work with the ARM.
+  <li> David Edelsohn for his direction via the steering committee and
+  ongoing work with the RS6000/PowerPC port.
+  <li> Paul Eggert for random hacking all over gcc.
+  <li> Klaus Espenlaub
+  <li> Doug Evans for much of the global optimization framework, arc, m32r,
+  and sparc work.
+  <li> Fred Fish for BeOS support and Ada fixes.
+  <li> R. Ganesan
+  <li> Peter Gerwinski for various bugfixes and the Pascal front end.
+  <li> Anthony Green for his -Os contribution.
+  <li> Kaveh Ghazi for overall direction via the steering committee and
+  amazing work to make -W -Wall useful.
+  <li> Judy Goldberg for c++ contributions.
+  <li> Torbjorn Granlund for various fixes and the c-torture testsuite.
+  <li> Bruno Haible for improvements in the runtime overhead for EH, new
+  warnings and assorted bugfixes.
+  <li> Michael Hayes for various thankless work he's done trying to get
+  the c30/c40 ports functional.
+  <li> Kate Hedstrom for staking the g77 folks with an initial testsuite.
+  <li> Richard Henderson for his ongoing sparc and alpha work, loop opts, and
+  generally fixing lots of old problems we've ignored for years.
+  <li> Paul N. Hilfinger
+  <li> Manfred Hollstein for his ongoing work to keep the m88k alive, lots
+  of testing an bugfixing, particularly of our configury code.
+  <li> Steve Holmgren for MachTen patches.
+  <li> Christian Iseli for various bugfixes.
+  <li> Kamil Iskra for general m68k hacking.
+  <li> Lee Iverson for random fixes and mips testing.
+  <li> Aaron Jackson
+  <li> Andreas Jaeger
+  <li> Jakub Jelinek for his sparc work and sibling call optimizations.
+  <li> J. Kean Johnston for OpenServer support.
+  <li> Klaus Kaempf for his ongoing work to make alpha-vms a viable target.
+  <li> Richard Kenner for his ongoing work with gcc2.
+  <li> Robin Kirkham for cpu32 support.
+  <li> Mark Klein for PA improvements.
+  <li> Bruce Korb for the future replacement of "fixincludes".
   <li> Geoffrey Keating for his ongoing work to make the PPC work for Linux.
+  <li> Brendan Kehoe for his ongoing work with g++.
+  <li> Mumit Khan for various contributions to the cygwin and mingw32 ports and
+  maintaining binary releases for Windows hosts.
+  <li> Thomas Koenig for various bugfixes.
+  <li> Benjamin Kosnik for his g++ work.
+  <li> Jeff Law for random hacking.
+  <li> Marc Lehmann for his guidance via the steering committee and helping
+  with analysis and improvements of x86 performance.
+  <li> Kriang Lerdsuwanakij for improvements to demangler and various c++ fixes.
   <li> Robert Lipe for OpenServer support, new testsuites, testing, etc.
+  <li> Weiwen Liu for testing and various bugfixes.
   <li> Martin von Loewis for internal consistency checking infrastructure,
   c++ namespaces.
   <li> Dave Love for his ongoing work with the Fortran front end and 
   runtime libraries.
-  <li> Gary Thomas for his ongoing work to make the PPC work for Linux.
-  <li> Ken Raeburn for various improvements to checker and mips ports.
-  <li> Todd Vierling for contributions for NetBSD ports.
-  <li> Peter Gerwinski for various bugfixes and the Pascal front end.
-  <li> Craig Burley for overall direction in the steering committee and
-  leadership of the Fortran effort.
+  <li> H.J. Lu for his contributions to the steering committee, many x86
+  bug reports, prototype patches, etc.
+  <li> Andrew MacLeod for his ongoing work in building a real EH system.
+  <li> Bob Manson for his behind the scenes work on dejagnu.
   <li> Vladimir Markarov for hacking some ugly i960 problems and overall 
   knowledge and direction in the area of instruction scheduling.
-  <li> Stan Cox for care and feeding of the x86 port.
-  <li> Gerald Pfeifer for helping with the web pages and pointing out lots
-  of problems we need to solve.
+  <li> Greg McGary for random fixes and (someday) bounded pointers.
+  <li> David T. McWherter
+  <li> Michael Meissner for LRS framework, m32r, v850, powerpc, haifa and
+  other assorted hacking.
+  <li> Jason Merrill for leading the g++ effort.
+  <li> David Mosberger-Tang for various Alpha improvements.
+  <li> Bill Moyer for his behind the scenes work on various issues.
+  <li> David Miller for overall direction via the steering committee, lots of
+  sparc work, improvements in jump.c and interfacing with the Linux kernel
+  developers.
+  <li> Mark Mitchell for mountains of C++ work, load/store hoisting out of
+  loops and alias analysis improvements.
+  <li> Alan Modra for various Linux bits and testing.
+  <li> Toon Moene for overall leadership via the steering committee, and his
+  ongoing work to make us make Fortran run fast.
   <li> Catherine Moore for fixing various ugly problems we have sent her
   way, including the haifa bug which was killing the Alpha & PowerPC Linux
   kernels.
-  <li> Klaus Kaempf for his ongoing work to make alpha-vms a viable target.
-  <li> Kamil Iskra for general m68k hacking.
-  <li> Weiwen Liu for testing and various bugfixes.
-  <li> Ralf Corsepious for SH testing and minor bugfixing.
   <li> Philippe De Muyter for his work on the m68k port.
-  <li> Andrew MacLeod for his ongoing work in building a real EH system.
-  <li> Joel Sherrill for his direction via the steering committee, RTEMS
-  contributions and RTEMS testing.
-  <li> Carlo Wood for various fixes.
-  <li> Manfred Hollstein for his ongoing work to keep the m88k alive, lots
-  of testing an bugfixing, particularly of our configury code.
-  <li> Ulrich Drepper for his work on the C++ runtime libraries, glibc, and
-  testing of egcs using glibc.
-  <li> Benjamin Kosnik for his g++ work.
-  <li> John Wehle for various improvements for the x86 code generator.
-  <li> Herman A.J. ten Brugge for various fixes.
-  <li> Graham S. for various infrastructure improvements.
-  <li> Bruno Haible for various new warnings.
-  <li> Juha Sarlin for improvements to the H8 code generator.
-  <li> Per Bothner for various improvements to our infrastructure for
-  supporting new languages.  Chill and (someday) his Java contributions.
-  <li> Mike Stump for his g++ contributions over the years and more recently
-  his vxworks contributions.
-  <li> Bruce Korb for the future replacement of "fixincludes".
-  <li> Bernd Schmidt for various code generation improvements and the first
-  step towards a new reload pass.
+  <li> Pieter Nagel
+  <li> Hans-Peter Nilsson for various documentation fixes and fixes to
+  the c++ demangler.
+  <li> Geoff Noer for this work on getting cygwin native builds working.
+  <li> Markus F.X.J. Oberhumer
+  <li> Sergey Okhapkin
   <li> Alexandre Oliva for various build infrastructure improvements, scripts
   and amazing testing work.
-  <li> Bob Manson for his behind the scenes work on dejagnu.
-  <li> Bill Moyer for his behind the scenes work on various issues.
-  <li> Paul Eggert for random hacking all over gcc.
-  <li> Alan Modra for various Linux bits and testing.
-  <li> Krister Walfridsson for random bugfixes.
-  <li> Don Bowman for mips-vxwork contributions.
-  <li> David Mosberger-Tang for various Alpha improvements.
-  <li> Richard Kenner for his ongoing work with gcc2.
-  <li> Geoff Noer for this work on getting cygwin native builds working.
-  <li> Teemu Torma for thread safe exception handling support.
+  <li> Alexandre Petit-Bianco for infrastructure related to Java.
+  <li> Gerald Pfeifer for helping with the web pages and pointing out lots
+  of problems we need to solve.
+  <li> Ovidiu Predescu for his work on the ObjC front end.
+  <li> Henning Ptersen
+  <li> Ken Raeburn for various improvements to checker and mips ports.
+  <li> Joern Rennecke for maintaining the sh port, regmove & reload hacking.
+  <li> Gavin Romig-Koch for lots of behind the scenes MIPS work.
   <li> Ken Rose for fixes to our delay slot filling code.
-  <li> Bruno Haible for improvements in the runtime overhead for EH
-  and assorted bugfixes.
-  <li> Michael Tiemann for random bugfixes.
+  <li> Andreas Schawb for his work on the m68k port.
+  <li> Graham S. for various infrastructure improvements.
+  <li> Jay Sachs
+  <li> Juha Sarlin for improvements to the H8 code generator.
+  <li> Bernd Schmidt for various code generation improvements and the first
+  step towards a new reload pass.
+  <li> Franz Sirl for his ongoing work with making the PPC port stable
+  for linux.
+  <li> Joel Sherrill for his direction via the steering committee, RTEMS
+  contributions and RTEMS testing.
+  <li> Nathan Sidwell
   <li> Andrey Slepuhin for assorted AIX hacking.
-  <li> Marc Lehmann for his guidance via the steering committee and helping
-  with analysis and improvements of x86 performance.
-  <li> Lee Iverson for random fixes.
-  <li> Greg McGary for random fixes and (someday) bounded pointers.
-  <li> Kriang Lerdsuwanakij for improvements to demangler and various c++
-  fixes.
-  <li> Toon Moene for overall leadership via the steering committee, and his
-  ongoing work to make us make Fortran run fast.
+  <li> Scott Snyder for variou fixes.
+  <li> Nigel Stephens for various mips16 related fixes/improvements.
+  <li> Mike Stump for his g++ contributions over the years and more recently
+  his vxworks contributions.
+  <li> Shigeya Suzuki for this fixes for the bsdi platforms.
+  <li> Ian Lance Taylor for his mips16 work, general configury hacking,
+  fixincludes, etc.
+  <li> Dmitrij Tejblum
+  <li> Michael Tiemann for random bugfixes.
+  <li> Gary Thomas for his ongoing work to make the PPC work for Linux.
+  <li> Philipp Thomas
+  <li> Teemu Torma for thread safe exception handling support.
+  <li> Tom Tromey for internationalization support (which egcs will import
+  from gcc2 shortly).
   <li> Lassi Tuura for improvements to config.guess to determine HP processor
   types.
-  <li> Anthony Green for his -Os contribution.
-  <li> Alasdair Baird for various bugfixes.
-  <li> Robin Kirkham for cpu32 support.
-  <li> Shigeya Suzuki for this fixes for the bsdi platforms.
-  <li> J. Kean Johnston for OpenServer support.
-  <li> Nigel Stephens for various mips16 related fixes/improvements.
-  <li> Fred Fish for BeOS support and Ada fixes.
-  <li> Christian Iseli for various bugfixes.
-  <li> Thomas Koenig for various bugfixes.
-  <li> Torbjorn Granlund for various fixes and the c-torture testsuite.
-  <li> Scott Snyder for variou fixes.
-  <li> Scott Christley for his ObjC contributions.
-  <li> Judy Goldberg for his c++ contributions.
-  <li> Kate Hedstrom for staking the g77 folks with an initial testsuite.
-  <li> Joe Buck for his guidance and leadership via the steering committee.
-  <li> Ovidiu Predescu for his work on the ObjC front end.
-  <li> Branko Cibej for more warning contributions.
-  <li> Steve Holmgren for MachTen patches.
-  <li> Mark Klein for PA improvements.
-  <li> Klaus-Georg Adams
-  <li> Klaus Espenlaub
-  <li> Henning Ptersen
-  <li> Andreas Jaeger
-  <li> Dmitrij Tejblum
-  <li> Sergey Okhapkin
-  <li> Juha Sarlin
-  <li> R. Ganesan
-  <li> Markus F.X.J. Oberhumer
-  <li> Pieter Nagel
-  <li> David T. McWherter?Br
-  <li> Jay Sachs
-  <li> Andrew Cagney
-  <li> Aaron Jackson
-  <li> Paul N. Hilfinger
+  <li> Todd Vierling for contributions for NetBSD ports.
+  <li> Krister Walfridsson for random bugfixes.
+  <li> John Wehle for various improvements for the x86 code generator.
   <li> Stephen Williams
-  <li> Philipp Thomas
-  <li> Nathan Sidwell
+  <li> Jim Wilson for tackling hard problems in various places that nobody else
+  wanted to work on.
+  <li> Carlo Wood for various fixes.
 </ul>
 
 
 We'd also like to thank the folks who have contributed time and energy in
 testing egcs:
 <ul>
-  <li> Alexandre Oliva
-  <li> Manfred Hollstein
-  <li> Kaveh Ghazi
-  <li> Craig Burley
-  <li> Kate Hedstrom
-  <li> Robert Lipe
   <li> David Billinghurst
-  <li> Dave Love
-  <li> David Edelsohn
+  <li> Horst von Brand
   <li> Rodney Brown
   <li> Joe Buck
-  <li> Jeff Law
-  <li> David Miller
-  <li> Mumit Khan
-  <li> David Schuler
-  <li> Vin Shelton
-  <li> Martin Knoblauch
-  <li> Franz Sirl
-  <li> David Rees
-  <li> Carlo Weed
-  <li> H.J. Lu
+  <li> Craig Burley
   <li> Ulrich Drepper
-  <li> Toon Moene
-  <li> Richard Polton
-  <li> Matthias Mueller
-  <li> Kamil Iskra
+  <li> David Edelsohn
+  <li> Kaveh Ghazi
   <li> Yung Shing Gene
   <li> Richard Henderson
-  <li> Mike Stump
-  <li> Horst von Brand
-  <li> Matthias Klose
-  <li> Damon Love
-  <li> Peter Schmid
+  <li> Manfred Hollstein
+  <li> Kate Hedstrom
+  <li> Kamil Iskra
   <li> Christian Joensson
+  <li> Jeff Law
+  <li> Robert Lipe
+  <li> Dave Love
+  <li> Damon Love
+  <li> H.J. Lu
+  <li> Mumit Khan
+  <li> Matthias Klose
+  <li> Martin Knoblauch
+  <li> Toon Moene
+  <li> David Miller
+  <li> Matthias Mueller
+  <li> Alexandre Oliva
+  <li> Richard Polton
+  <li> David Rees
+  <li> Peter Schmid
+  <li> David Schuler
+  <li> Vin Shelton
+  <li> Franz Sirl
+  <li> Mike Stump
+  <li> Carlo Wood
   <li> And many others
 </ul>
 
@@ -215,7 +212,7 @@ testing egcs:
 And finally we'd like to thank everyone who uses the compiler, submits bug
 reports and generally reminds us why we're doing this work in the first place.
 
-<p><i>Last modified:  August 29, 1998</i>
+<p><i>Last modified:  September 1, 1998</i>
 
 
 <hr>
