--- a/htdocs/mirrors.html
+++ b/htdocs/mirrors.html
@@ -20,6 +20,7 @@ if you are mirroring the egcs pages so we can note it here!
 <li>Austria: <a href="ftp://gd.tuwien.ac.at/gnu/egcs/">gd.tuwien.ac.at</a>
 <li>France: <a href="ftp://ftp.ilog.fr/pub/Mirrors/egcs/">ftp.ilog.fr</a>
 <li>France: <a href="ftp://ftp.lip6.fr/pub/egcs/">ftp.lip6.fr</a>
+<li>France (Brittany): <a href="ftp://ftp.irisa.fr/pub/mirrors/egcs">ftp.irisa.fr</a>
 <li>Czech Republic: <a href="ftp://sunsite.mff.cuni.cz/pub/GNU/egcs/">sunsite.mff.cuni.cz</a>
 <li>Denmark: <a href="ftp://sunsite.auc.dk/pub/egcs/">sunsite.auc.dk</a>
 <LI>Germany (Berlin): <A HREF="ftp://ftp.fu-berlin.de/unix/languages/egcs/">Germany: ftp.fu-berlin.de </A>, thanks to <A HREF="mailto:leitner@math.fu-berlin.de">Felix von Leitner</A>!
@@ -35,6 +36,8 @@ thanks to <a href="mailto:ktroulos@noc.ntua.gr">Costas Troulos</a>.
 <LI>Nijmegen, Netherlands: <A HREF="ftp://ftp.nluug.nl/pub/languages/egcs">ftp.nluug.nl</a>, thanks to <a href="mailto:jc@ATComputing.nl">Jan Cristiaan van Winkel</a>!
 <LI>Tokyo, Japan: <A HREF="ftp://ftp.dti.ad.jp/pub/lang/egcs">ftp.dti.ad.jp</a>, thanks to <a href="mailto:ftp-admin@dti.ad.jp">IWAIZAKO Takahiro</a>!
 <LI>Taejon, Korea: <A HREF="ftp://cair-archive.kaist.ac.kr/pub/gnu/egcs">cair-archive.kaist.ac.kr</a>, thanks to <a href="mailto:ahmls@nmsvr.chosun.com">Ho-sun Lee</a>!
+<li>Finland: <a href="ftp://ftp.funet.fi/mirrors/ftp.cygnus.com/pub/egcs">ftp.funet.fi</a>
+<li>Canada: <a href="ftp://ftp.crc.ca/pub/packages/egcs">ftp.crc.ca</a>
 </ul>
 
 <p>These sites are mirroring <tt>ftp.goof.com</tt>'s site, so we get to mooch
