--- a/htdocs/egcs-1.1/egcs-1.1.html
+++ b/htdocs/egcs-1.1/egcs-1.1.html
@@ -6,13 +6,12 @@
 <h1 align="center">egcs-1.1</h1>
 
 <p> This is the prototype announcement.  egcs-1.1 has not been released yet.
-<p>XXX, 1998
+<p>September 3, 1998
 
 <p>We are pleased to announce the release of egcs-1.1.
 
-<p>egcs is a collaborative effort involving several groups of hackers using
-an open development model to accelerate development and testing of GNU
-compilers and runtime libraries.
+<p>EGCS is a free software project to further the development of the
+GNU compilers using an open development environment.
 
 <p>egcs-1.1 is a major new release of the egcs compiler system.  It has been
 <a href="egcs-1.1-test.html"> extensively tested </a> and is believed to be
@@ -48,11 +47,13 @@ of the egcs-1.1 distribution).  However, we also keep the most up to date
 and <a href="buildstat.html"> build/test status </a> on our web page.  We
 will update those pages as new information becomes available.
 
-<p>And, we can't in good conscience fail to mention some
-<a href="caveats.html"> caveats </a> to using egcs-1.1.
+<p> The egcs project would like to thank the numerous people that have
+contributed new features, test results, bugfixes, etc.  This 
+<a href="../thanks.html"> amazing group of volunteers </a> is what makes
+egcs successful.
 
-<p>Update: Big thanks to Stanford for providing a high speed link for
-downloading egcs (go.cygnus.com)!
+<p>And finally, we can't in good conscience fail to mention some
+<a href="caveats.html"> caveats </a> to using egcs-1.1.
 
 <p><a href="ftp://egcs.cygnus.com/pub/egcs/releases/index.html">
 Download egcs-1.1
@@ -67,12 +68,9 @@ from cambridge.cygnus.com (USA Massachusetts)</a>
 <p>The egcs-1.1 release is also available on many mirror sites.<br>
 <a href="../mirrors.html"> Goto mirror list to find a closer site</a>
 
-<p>We'd like to thank the numerous people that have contributed new
-features, test results, bugfixes, etc.  Unfortunately, they're far
-too numerous to mention by name.
 
 <hr>
-<i>Last modified on May 10, 1998.</i>
+<i>Last modified on September 1, 1998.</i>
 
 <!--#include virtual="/glimpsebox.html"-->
 </body>
