Add 5 more mirrors found via quick review of the ftp logs.

--- a/htdocs/mirrors.html
+++ b/htdocs/mirrors.html
@@ -22,10 +22,13 @@ if you are mirroring the egcs pages so we can note it here!
 <li>France: <a href="ftp://ftp.lip6.fr/pub/egcs/">ftp.lip6.fr</a>
 <li>France (Brittany): <a href="ftp://ftp.irisa.fr/pub/mirrors/egcs">ftp.irisa.fr</a>
 <li>Czech Republic: <a href="ftp://sunsite.mff.cuni.cz/pub/GNU/egcs/">sunsite.mff.cuni.cz</a>
+<li>Czech Republic: <a href="ftp://ftp.gts.cz/pub/MIRRORS/ftp.cygnus.com/pub/egcs/">ftp.gts.cz</a>
 <li>Denmark: <a href="ftp://sunsite.auc.dk/pub/egcs/">sunsite.auc.dk</a>
 <LI>Germany (Berlin): <A HREF="ftp://ftp.fu-berlin.de/unix/languages/egcs/">Germany: ftp.fu-berlin.de </A>, thanks to <A HREF="mailto:leitner@math.fu-berlin.de">Felix von Leitner</A>!
 <LI>Germany: <A HREF="ftp://ftp.gwdg.de/pub/cygnus/egcs/">ftp.gwdg.de</a>
+<LI>Germany: <A HREF="ftp://ftp.mpi-sb.mpg.de/pub/gnu/mirror/egcs.cygnus.com/egcs/">ftp.mpi-sb.mpg.de</a>
 <LI>Poland (Warsaw): <A HREF="ftp://sunsite.icm.edu.pl/pub/programming/egcs/">sunsite.icm.edu.pl</a>
+<LI>Poland: <A HREF="ftp://ftp.task.gda.pl/mirror/egcs.cygnus.com/pub/egcs">ftp.task.gda.pl</a>
 <LI>Sweden: <A HREF="ftp://ftp.sunet.se/pub/gnu/egcs/">ftp.sunet.se</a>
 <LI>Brasil (releases only, no snapshots): <A HREF="ftp://ftp.unicamp.br/pub/gnu/=EXTRA=/cygnus/egcs/">ftp.unicamp.br</a>
 <LI>Portugal: <A HREF="ftp://ftp.lca.uevora.pt/pub/egcs">ftp.lca.uevora.pt</a>
@@ -35,6 +38,8 @@ if you are mirroring the egcs pages so we can note it here!
 thanks to <a href="mailto:ktroulos@noc.ntua.gr">Costas Troulos</a>.
 <LI>Nijmegen, Netherlands: <A HREF="ftp://ftp.nluug.nl/pub/languages/egcs">ftp.nluug.nl</a>, thanks to <a href="mailto:jc@ATComputing.nl">Jan Cristiaan van Winkel</a>!
 <LI>Tokyo, Japan: <A HREF="ftp://ftp.dti.ad.jp/pub/lang/egcs">ftp.dti.ad.jp</a>, thanks to <a href="mailto:ftp-admin@dti.ad.jp">IWAIZAKO Takahiro</a>!
+<li>Japan: <a href="ftp://ftp.win.or.jp/pub/lang/egcs">ftp.win.or.jp</a>
+<li>Japan: <a href="ftp://ftp.dti.ad.jp/pub/lang/egcs">ftp.dti.ad.jp</a>
 <LI>Taejon, Korea: <A HREF="ftp://cair-archive.kaist.ac.kr/pub/gnu/egcs">cair-archive.kaist.ac.kr</a>, thanks to <a href="mailto:ahmls@nmsvr.chosun.com">Ho-sun Lee</a>!
 <li>Finland: <a href="ftp://ftp.funet.fi/mirrors/ftp.cygnus.com/pub/egcs">ftp.funet.fi</a>
 <li>Canada: <a href="ftp://ftp.crc.ca/pub/packages/egcs">ftp.crc.ca</a>
