--- a/htdocs/egcs-1.1/egcs-1.1.html
+++ b/htdocs/egcs-1.1/egcs-1.1.html
@@ -5,7 +5,6 @@
 <body>
 <h1 align="center">egcs-1.1</h1>
 
-<p> This is the prototype announcement.  egcs-1.1 has not been released yet.
 <p>September 3, 1998
 
 <p>We are pleased to announce the release of egcs-1.1.
@@ -57,7 +56,7 @@ egcs successful.
 
 <p><a href="ftp://egcs.cygnus.com/pub/egcs/releases/index.html">
 Download egcs-1.1
-from ftp.cygnus.com (USA California)</a>
+from egcs.cygnus.com (USA California)</a>
 <p><a href="ftp://go.cygnus.com/pub/ftp.cygnus.com/egcs/releases/index.html">
 Download egcs-1.1 from go.cygnus.com (USA California -- High speed link
 provided by Stanford)</a>
@@ -70,7 +69,7 @@ from cambridge.cygnus.com (USA Massachusetts)</a>
 
 
 <hr>
-<i>Last modified on September 1, 1998.</i>
+<i>Last modified on September 2, 1998.</i>
 
 <!--#include virtual="/glimpsebox.html"-->
 </body>
