Add links to the egcs-1.1 announcement where appropriate.

--- a/htdocs/news.html
+++ b/htdocs/news.html
@@ -8,6 +8,10 @@
 <h2>NEWS</h2>
 
 <dl>
+<dt><b>September 3, 1998</b></dt>
+<dd>
+  <a href="egcs-1.1/egcs-1.1.html"> <b>egcs-1.1 is released</b></a>.
+</dd>
 <dt><b>August 29, 1998</b></dt>
 <dd>
   <a href="chill.html"> <b>Cygnus donates Chill front end</b></a>.
