html & speling fixes

--- a/htdocs/chill.html
+++ b/htdocs/chill.html
@@ -35,8 +35,8 @@ of a different Gcc front-end), and for those who find it useful.
 It is an unsupported hacker release.  Bug reports without
 patches are likely to get ignored.  Questions may get answered or
 ignored depending on our mood!  If you want to try your luck,
-you can send a note to David Brolley <brolley@cygnus.com> or
-Per Bothner <bothner@cygnus.com>.
+you can send a note to David Brolley &lt;brolley@cygnus.com> or
+Per Bothner &lt;bothner@cygnus.com>.
 
 One known problem is that we only support native builds of GNU Chill.
 If you need a cross-compiler, you will find various problems,
@@ -44,7 +44,7 @@ including the directory structure, and the setjmp-based exception
 handling mechanism.
 
 The Chill run-time system is in the runtime sub-directory.
-Notice rts.c contains a poor main's implementation of Chill
+Notice rts.c contains a poor man's implementation of Chill
 "processes" (threads).  It is not added to libchill.a.
 We only use it for testing.  (Our customer uses a different
 implementation for production work.)
