--- a/htdocs/egcs-1.1/egcs-1.1-branch.html
+++ b/htdocs/egcs-1.1/egcs-1.1-branch.html
@@ -2,7 +2,7 @@
 <head>
 <title>egcs-1.1 branch </title>
 </head>
-<body bgcolor="white">
+<body>
 <h1 align="center">egcs-1.1 branch</h1>
 
 <p>We have made a branch in the source tree for egcs-1.1.  Depending on your
