--- a/htdocs/egcs-1.1/fortran.html
+++ b/htdocs/egcs-1.1/fortran.html
@@ -219,7 +219,7 @@ In 0.5.22:
 
    * Fix a `g++' crash.
 
-   * Support `FORMAT(I<EXPR>)' when EXPR is a compile-time constant
+   * Support `FORMAT(I&lt;EXPR>)' when EXPR is a compile-time constant
      `INTEGER' expression.
 
    * Fix `g77' `-g' option so procedures that use `ENTRY' can be
@@ -778,7 +778,7 @@ In 0.5.18:
      `INTEGER*8', and their `LOGICAL' equivalents.  (This support works
      on most, maybe all, `gcc' targets.)
 
-     Thanks to Scott Snyder (<snyder@d0sgif.fnal.gov>) for providing
+     Thanks to Scott Snyder (&lt;snyder@d0sgif.fnal.gov>) for providing
      the patch for this!
 
      Among the missing elements from the support for these features are
@@ -788,7 +788,7 @@ In 0.5.18:
      type-declaration statements.  `BYTE' corresponds to `INTEGER*1',
      while `WORD' corresponds to `INTEGER*2'.
 
-     Thanks to Scott Snyder (<snyder@d0sgif.fnal.gov>) for providing
+     Thanks to Scott Snyder (&lt;snyder@d0sgif.fnal.gov>) for providing
      the patch for this!
 
    * The compiler code handling intrinsics has been largely rewritten
@@ -884,7 +884,7 @@ In 0.5.18:
 
      This effort was inspired by a first pass at translating
      `g77-0.5.16/f/DOC' that was contributed to Craig by David Ronis
-     (<ronis@onsager.chem.mcgill.ca>).
+     (&lt;ronis@onsager.chem.mcgill.ca>).
 
    * New `-fno-second-underscore' option to specify that, when
      `-funderscoring' is in effect, a second underscore is not to be
@@ -909,7 +909,7 @@ In 0.5.18:
 
      Note that the email addresses related to `f2c' have changed--the
      distribution site now is named `netlib.bell-labs.com', and the
-     maintainer's new address is <dmg@bell-labs.com>.
+     maintainer's new address is &lt;dmg@bell-labs.com>.
 
 In 0.5.17:
 ==========
