--- a/htdocs/install/test.html
+++ b/htdocs/install/test.html
@@ -27,7 +27,7 @@ dejagnu, you can run the testsuite with "cd <i>objdir</i>; make -k check".
 This may take a long time.  Go get some lunch.
 
 <p>The testing process will try to test as many components in the egcs
-distrubution as possible, including the C, C++ and Fortran compiler as
+distribution as possible, including the C, C++ and Fortran compiler as
 well as the C++ runtime libraries.
 
 <p> How to interpret test results TBD.
