Small update from Hans-Peter Nillson

--- a/htdocs/thanks.html
+++ b/htdocs/thanks.html
@@ -114,8 +114,8 @@ particular order.
   kernels.
   <li> Philippe De Muyter for his work on the m68k port.
   <li> Pieter Nagel
-  <li> Hans-Peter Nilsson for various documentation fixes and fixes to
-  the c++ demangler.
+  <li> Hans-Peter Nilsson for various documentation fixes and other
+small fixes.
   <li> Geoff Noer for this work on getting cygwin native builds working.
   <li> Markus F.X.J. Oberhumer
   <li> Sergey Okhapkin
