Some initial success reports.

--- a/htdocs/egcs-1.1/buildstat.html
+++ b/htdocs/egcs-1.1/buildstat.html
@@ -5,9 +5,22 @@
 <body>
 <h1 align="center">Build and Test status for egcs-1.1</h1>
 
+<p><b>i586-unknown-linux-gnu Debian</b><br>
+Successful
+
+<p><b>x86-unknown-linux-gnu RedHat 5.1</b><br>
+Successful
+
+<p><b>rs6000-ibm-aix4.1.5.0</b> <br>
+Successful
+
+<p><b>sparc-sun-solaris2.6</b> <br>
+Successful
+
+
 <hr>
 <p>
-<i>Last modified on August 29, 1998.</i>
+<i>Last modified on September 3, 1998.</i>
 
 <!--#include virtual="/glimpsebox.html"-->
 </body>
