--- a/htdocs/egcs-1.1/buildstat.html
+++ b/htdocs/egcs-1.1/buildstat.html
@@ -5,13 +5,25 @@
 <body>
 <h1 align="center">Build and Test status for egcs-1.1</h1>
 
+<p><b>i586-unknown-linux-gnulibc1</b><br>
+Successful
+
 <p><b>i586-unknown-linux-gnu Debian</b><br>
+Successful
+
+<p><b>i686-unknown-linux-gnu</b><br>
+Successful
+
+<p><b>i686-pc-sco3.2v5.0.5</b><br>
 Successful
 
 <p><b>x86-unknown-linux-gnu RedHat 5.1</b><br>
 Successful
 
 <p><b>rs6000-ibm-aix4.1.5.0</b> <br>
+Successful
+
+<p><b>sparc-sun-solaris2.5.1</b> <br>
 Successful
 
 <p><b>sparc-sun-solaris2.6</b> <br>
