New libg++ URL.

--- a/htdocs/faq.html
+++ b/htdocs/faq.html
@@ -545,8 +545,8 @@ should point out that few programs actually need libg++; most only need
 libstdc++/libio which are included in the egcs distribution.
 
 <p>If you do need libg++ you can get a libg++ snapshot  which works with egcs
-from <a href="ftp://ftp.yggdrasil.com/private/hjl/libg++-2.8.1-980828.tar.gz">
-ftp://ftp.yggdrasil.com/private/hjl/libg++-2.8.1-980828.tar.gz</a>
+from <a href="ftp://ftp.yggdrasil.com/private/hjl/libg++-2.8.1.2.tar.gz">
+ftp://ftp.yggdrasil.com/private/hjl/libg++-2.8.1.2.tar.gz</a>
 
 <hr>
 <h2> <a name="generated_files">autoconf, bison, xgettext, automake, etc</a></h2>
