--- a/htdocs/egcs-1.1/buildstat.html
+++ b/htdocs/egcs-1.1/buildstat.html
@@ -29,10 +29,13 @@ Successful
 <p><b>sparc-sun-solaris2.6</b> <br>
 Successful
 
+<p><b>sparc-sun-sunos4.1.4</b> <br>
+Successful
+
 
 <hr>
 <p>
-<i>Last modified on September 3, 1998.</i>
+<i>Last modified on September 5, 1998.</i>
 
 <!--#include virtual="/glimpsebox.html"-->
 </body>
