--- a/htdocs/egcs-1.1/buildstat.html
+++ b/htdocs/egcs-1.1/buildstat.html
@@ -20,6 +20,9 @@ Successful
 <p><b>x86-unknown-linux-gnu RedHat 5.1</b><br>
 Successful
 
+<p><b>mips-sgi-irix6.5</b><br>
+Successful
+
 <p><b>rs6000-ibm-aix4.1.4.0</b> <br>
 Successful
 
