--- a/htdocs/egcs-1.1/buildstat.html
+++ b/htdocs/egcs-1.1/buildstat.html
@@ -5,6 +5,12 @@
 <body>
 <h1 align="center">Build and Test status for egcs-1.1</h1>
 
+<p><b>alphapca56-unknown-linux-gnu</b><br>
+Successful
+
+<p><b>hppa1.1-hp-hpux10.20</b><br>
+Successful
+
 <p><b>i586-unknown-linux-gnulibc1</b><br>
 Successful
 
