--- a/htdocs/egcs-1.1/buildstat.html
+++ b/htdocs/egcs-1.1/buildstat.html
@@ -5,6 +5,9 @@
 <body>
 <h1 align="center">Build and Test status for egcs-1.1</h1>
 
+<p><b>alphaev5-unknown-linux-gnu</b><br>
+Successful
+
 <p><b>alphapca56-unknown-linux-gnu</b><br>
 Successful
 
