--- a/htdocs/egcs-1.1/buildstat.html
+++ b/htdocs/egcs-1.1/buildstat.html
@@ -5,6 +5,9 @@
 <body>
 <h1 align="center">Build and Test status for egcs-1.1</h1>
 
+<p><b>alphaev56-dec-osf4.0d</b><br>
+Successful
+
 <p><b>alphaev5-unknown-linux-gnu</b><br>
 Successful
 
@@ -27,6 +30,12 @@ Successful
 Successful
 
 <p><b>x86-unknown-linux-gnu RedHat 5.1</b><br>
+Successful
+
+<p><b>mips-sgi-irix5.2</b><br>
+Successful
+
+<p><b>mips-sgi-irix6.3</b><br>
 Successful
 
 <p><b>mips-sgi-irix6.5</b><br>
@@ -53,7 +62,7 @@ Successful
 
 <hr>
 <p>
-<i>Last modified on September 5, 1998.</i>
+<i>Last modified on September 8, 1998.</i>
 
 <!--#include virtual="/glimpsebox.html"-->
 </body>
