--- a/htdocs/egcs-1.1/buildstat.html
+++ b/htdocs/egcs-1.1/buildstat.html
@@ -14,6 +14,9 @@ Successful
 <p><b>alphapca56-unknown-linux-gnu</b><br>
 Successful
 
+<p><b>hppa1.1-hp-hpux9.05</b><br>
+Successful
+
 <p><b>hppa1.1-hp-hpux10.20</b><br>
 Successful
 
