--- a/htdocs/egcs-1.1/buildstat.html
+++ b/htdocs/egcs-1.1/buildstat.html
@@ -50,6 +50,9 @@ Successful
 <p><b>rs6000-ibm-aix4.1.5.0</b> <br>
 Successful
 
+<p><b>rs6000-ibm-aix4.2.0.0</b> <br>
+Successful
+
 <p><b>sparc-sun-solaris2.5</b> <br>
 Successful
 
