Fortran ChangeLogs no longer special.

--- a/htdocs/checkin.html
+++ b/htdocs/checkin.html
@@ -68,9 +68,7 @@ It will also identify any files in your local tree that you have modified.
 
 <p>Apply the patch to your local tree and update the <tt>ChangeLog</tt>
 file.  Use the current date/time for the <tt>ChangeLog</tt> entry, not
-the time that the patch was submitted.  Note in the "<tt>gcc/f</tt>" and
-"<tt>libf2c</tt>" directories you should modifify <tt>ChangeLog.egcs</tt>
-instead of <tt>ChangeLog</tt>.
+the time that the patch was submitted.
 
 <p>Make sure to rebuild any generated files that would be effected by
 the patch.  Make sure to check them in along with the files explicitly
@@ -276,7 +274,7 @@ you should check them in with separate cvs commit commands.
 <p>And that's it!
 
 <hr>
-<i>Last modified on July 2, 1998.</i>
+<i>Last modified on Sept 9, 1998.</i>
 
 </body>
 </html>
