--- a/htdocs/egcs-1.1/buildstat.html
+++ b/htdocs/egcs-1.1/buildstat.html
@@ -38,6 +38,9 @@ Successful
 <p><b>mips-sgi-irix5.2</b><br>
 Successful
 
+<p><b>mips-sgi-irix5.3</b><br>
+Successful
+
 <p><b>mips-sgi-irix6.3</b><br>
 Successful
 
@@ -68,7 +71,7 @@ Successful
 
 <hr>
 <p>
-<i>Last modified on September 8, 1998.</i>
+<i>Last modified on September 9, 1998.</i>
 
 <!--#include virtual="/glimpsebox.html"-->
 </body>
