--- a/htdocs/egcs-1.1/buildstat.html
+++ b/htdocs/egcs-1.1/buildstat.html
@@ -29,6 +29,9 @@ Successful
 <p><b>i686-unknown-linux-gnu</b><br>
 Successful
 
+<p><b>i686-pc-sco3.2v5.0.4</b><br>
+Successful
+
 <p><b>i686-pc-sco3.2v5.0.5</b><br>
 Successful
 
