A much improved reporting bugs entry.

--- a/htdocs/faq.html
+++ b/htdocs/faq.html
@@ -9,6 +9,7 @@
   <li><a href="#gcc-2-diff">How is EGCS different from gcc2?</a>
   <li><a href="#open-development">What is an open development model?</a>
   <li><a href="#release-fork">Releases and Forking</a>
+  <li><a href="#bugreport">How to report bugs</a>
   <li><a href="#libc-lock">bits/libc-lock.h:  No such file or directory</a>
   <li><a href="#morelibc">`_IO_stdfile_0_lock' was not declared in this scope</a>
   <li><a href="#fortran">Problems building the Fortran compiler</a>
@@ -185,6 +186,43 @@ that make releases based on some version of the gcc sources (Cygnus, g77,
 etc).  All the code is still available for inclusion in gcc at the discretion
 of the gcc maintainers.
 </pre>
+
+<hr>
+<h2> <a name="bugreport">How to report bugs</a></h2>
+<p>There are complete instructions in the egcs info manual, section Bugs.  The
+manual can be read using `<i>M-x <tt>info</tt></i>' in Emacs, or if the GNU
+<tt>info</tt> program is installed on your system by
+ `<tt>info --node "(gcc)Bugs"</tt>'.
+Or see the file <a href="/cgi-bin/cvsweb/gcc/BUGS?rev=1.1">BUGS</a> included
+with the egcs source code.
+
+<p>In short, if egcs says <tt>Internal compiler error</tt>, mail a bug report
+to <a href="mailto:egcs-bugs@cygnus.com">egcs-bugs@cygnus.com</a> including:
+
+<ul>
+  <li>The egcs version
+
+  <li>The system type
+
+  <li>All options you passed to egcs
+
+  <li>Preprocessed output of the source file that caused the compiler error
+</ul>
+
+<p>All this can normally be accomplished by mailing the command line, the
+output of the command, and the resulting `<tt><i>your-file</i>.i</tt>' for C,
+or `<tt><i>your-file</i>.ii</tt>' for C++, corresponding to:
+
+<p><tt>egcs -v --save-temps <i>all-your-options</i> <i>your-file</i>.c</tt>
+
+<p>Typically the CPP output will be large, so please compress the resulting
+file with one of the popular compression programs such as <tt>gzip</tt>,
+<tt>bzip2</tt>, <tt>compress</tt> or <tt>pkzip</tt>, then include the
+compressed CPP output as an attachment to your message.
+
+<p>The egcs lists have message size limits (40 kbytes) and uncompressed bug
+reports over those limits will be bounced.  Most compressed but reports are
+allowed to exceed the limits unless they are unreasonably huge.
 
 <hr>
 <h2><a name="libc-lock">bits/libc-lock.h: No such file or directory</a></h2>
@@ -763,7 +801,7 @@ configure as if the system were rs6000-ibm-aix4.2, which will disable
 http://reality.sgi.com/ariel/freeware</a>
 
 <p><a href="index.html">Return to the EGCS home page</a>
-<p><i>Last modified:  September 8, 1998</i>
+<p><i>Last modified:  September 9, 1998</i>
 
 <!--#include virtual="/glimpsebox.html"-->
 </body>
