--- a/htdocs/egcs-1.1/buildstat.html
+++ b/htdocs/egcs-1.1/buildstat.html
@@ -47,6 +47,9 @@ Successful
 <p><b>mips-sgi-irix5.3</b><br>
 Successful
 
+<p><b>mips-sgi-irix6.2</b><br>
+Successful
+
 <p><b>mips-sgi-irix6.3</b><br>
 Successful
 
