Pointer to patches for 2.0.xx kernel asm problems.

--- a/htdocs/faq.html
+++ b/htdocs/faq.html
@@ -425,7 +425,10 @@ for the "g++", "c++" and "g77" compiler drivers.
 <p> If you have tried to build a 2.0.xx kernel for Intel machines with
 EGCS, then you are on your own.  The 2.0.xx kernels are to be built only
 with gcc-2.7.2.  They use certain asm constructs which are incorrect, but
-(by accident) happen to work with gcc-2.7.2.
+(by accident) happen to work with gcc-2.7.2.  If you insist on building
+2.0.xx kernels with egcs, you may be interested in this 
+<a href=http://www.suse.de/~florian/kernel+egcs.html> patch </a> which
+fixes some (all?) of the asm problems.
 
 <p>If you installed a recent binutils/gas snapshot on your Linux system,
 you may not be able to build the kernel because objdump does not understand
@@ -801,7 +804,7 @@ configure as if the system were rs6000-ibm-aix4.2, which will disable
 http://reality.sgi.com/ariel/freeware</a>
 
 <p><a href="index.html">Return to the EGCS home page</a>
-<p><i>Last modified:  September 9, 1998</i>
+<p><i>Last modified:  September 15, 1998</i>
 
 <!--#include virtual="/glimpsebox.html"-->
 </body>
