Note addition of c4x port.

--- a/htdocs/news.html
+++ b/htdocs/news.html
@@ -8,6 +8,10 @@
 <h2>NEWS</h2>
 
 <dl>
+<dt><b>September 18, 1998</b></dt>
+<dd>
+  Michael Hayes donates <a href="/cgi-bin/cvsweb/gcc/README.C4X?rev=HEAD">
+  c4x port. </a>
 <dt><b>September 6, 1998</b></dt>
 <dd>
   <a href="http://www.cygnus.com"> Cygnus </a> donates <a href="http://sourceware.cygnus.com/java/gcj-announce.txt"> <b>Java front end</b></a>.
@@ -97,7 +101,7 @@ You can read some more <a href="libstdc++-v3.html">here</a>.</dd>
 
 <hr>
 <a name="glimpsebox"></a>
-<i>Last modified on August 22, 1998.</i>
+<i>Last modified on September 18, 1998.</i>
 
 <!--#include virtual="/glimpsebox.html"-->
 </body>
